fixed icon's alignment

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3543,10 +3543,10 @@ a.toggle_selector
       :padding 0px
       li#logo 
         :float left
-        :margin 25px 25px 0px 0px
+        :margin 25px 35px 0px 0px
       li#twitter
         :float left
-        margin: 50px 10px
+        margin: 54px 10px 50px 10px
       li#fb
         :float left
         margin: 50px 10px
